# professor-spillet

./: 1.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  professor.ipynb  pyproject.toml
img/: IMG_2043.HEIC
